# s3-uploader-sse

./: .env.example  Cargo.toml  compose.yaml
.cargo/: config.toml
crates/routes/: Cargo.toml
crates/routes/src/: common.rs  lib.rs
crates/routes/src/files/: upload.rs
crates/routes/src/images/: upload.rs  utils.rs
crates/routes/src/uploads/: mod.rs  upload.rs  utils.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  route_v1.rs
crates/utils/: Cargo.toml
crates/utils/src/: context.rs  error.rs  lib.rs  stream.rs
crates/utils/src/image/: mod.rs  s3.rs
crates/utils/src/settings/: mod.rs  structs.rs
crates/utils/src/utils/: mod.rs  s3.rs  temp_file.rs
