[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/routes", "crates/server", "crates/utils"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.9"
actix-multipart = "0.6"
actix-cors = "0.7.1"
aws-sdk-s3 = "1.82.0"
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
bytes = "1.7"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
async-stream = "0.3"
tracing = "0.1"
dotenv = "0.15"
mime = "0.3"
tokio-retry = "0.3"
image = "0.25"
sha2 = "0.10"
anyhow = "1.0.98"
strum = { version = "0.27", features = ["derive"] }
serde_json = "1.0.135"
env_logger = "0.11.6"
