[package]
name = "routes"
version.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
actix-web = { workspace = true }
actix-multipart = { workspace = true }
aws-sdk-s3 = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
mime = { workspace = true }
tokio-retry = { workspace = true }
image = { workspace = true }
sha2 = { workspace = true }
