[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = { workspace = true }
aws-sdk-s3 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
